--- a/app/package.json
+++ b/app/package.json
@@ -2,20 +2,27 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "proxy": "http://localhost:8080",
+  "scripts": {
+    "startserver": "nodemon server.js",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "unit": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "node-fetch": "^3.2.10",
+    "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
